<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chehanr.dolanpls.AboutActivity"
    android:background="#ff2a2a2a">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Made by:"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textColor="#ffffffff"
        android:id="@+id/Name"
        android:textSize="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/author_pic"
        android:cropToPadding="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:id="@+id/github"
        android:textColor="#ffffffff"
        android:layout_below="@+id/Name"
        android:layout_alignLeft="@+id/licence"
        android:layout_alignStart="@+id/licence"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tumblr"
        android:id="@+id/tumblr"
        android:textColor="#ffffffff"
        android:layout_above="@+id/licence"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        android:id="@+id/twitter"
        android:textColor="#ffffffff"
        android:layout_below="@+id/Name"
        android:layout_alignRight="@+id/licence"
        android:layout_alignEnd="@+id/licence"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/licence"
        android:text="@string/licence"
        android:textColor="#ff85a6ff"
        android:textSize="10dp"
        android:editable="false"
        android:inputType="none"
        android:layout_below="@+id/github"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

</RelativeLayout>
